--- a/package.json
+++ b/package.json
@@ -2,32 +2,36 @@
   "name": "patakers",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@4.9.2",
+  "type": "module",
+  "packageManager": "pnpm@10.17.1",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite dev",
+    "build": "vite build && tsc --noEmit",
+    "start": "node .output/server/index.mjs",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-router": "^1.159.10",
+    "@tanstack/react-router-devtools": "^1.159.10",
+    "@tanstack/react-start": "^1.159.12",
     "@tanstack/react-table": "^8.21.3",
-    "ky": "^1.8.2",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "resend": "^6.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "csstype": "^3.1.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@netlify/vite-plugin-tanstack-start": "^1.2.9",
+    "@tailwindcss/vite": "^4.1.18",
+    "@typescript-eslint/parser": "^8.46.2",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.0.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.2",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
