--- a/package.json
+++ b/package.json
@@ -9,26 +9,39 @@
     "build": "vite build && tsc --noEmit",
     "start": "node .output/server/index.mjs",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:install": "playwright install chromium",
+    "reactbits:list": "reactbits-installer --list",
+    "reactbits:check": "reactbits-installer --check --output ./src/components/reactbits",
+    "reactbits:install": "reactbits-installer --output ./src/components/reactbits",
+    "reactbits:force": "reactbits-installer --force --output ./src/components/reactbits"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.159.10",
-    "@tanstack/react-router-devtools": "^1.159.10",
-    "@tanstack/react-start": "^1.159.12",
+    "@sentry/node": "^10.40.0",
+    "@sentry/react": "^10.40.0",
+    "@tanstack/react-router": "^1.161.1",
+    "@tanstack/react-router-devtools": "^1.161.1",
+    "@tanstack/react-start": "^1.161.1",
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "resend": "^6.0.1"
+    "resend": "^6.0.1",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
     "@netlify/vite-plugin-tanstack-start": "^1.2.9",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/vite": "^4.1.18",
-    "@typescript-eslint/parser": "^8.46.2",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.0.0",
+    "playwright": "^1.58.2",
+    "reactbits-installer": "^2.0.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.2",
     "vite": "^7.3.1",
